--- a/src/asset/styles/index.css
+++ b/src/asset/styles/index.css
@@ -68,7 +68,7 @@
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
   --bs-body-bg: #fff;
-  --bg-turmaric: #ed980c;
+  --bg-turmaric: #285598;
 }
 *,
 ::after,
