--- a/src/asset/styles/you.css
+++ b/src/asset/styles/you.css
@@ -18,18 +18,22 @@
 }
 
 .tab-active {
-    background-color: #ed980c;
+    background-color: #285598;
     color: #fff;
 }
 
 .tab-active:first-child {
     border-radius: 1rem 0 0 1rem;
-    background-color: #ed980c;
+    background-color: #285598;
     color: #fff;
 }
 
 .tab-active:last-child {
     border-radius: 0 1rem 1rem 0;
-    background-color: #ed980c;
+    background-color: #285598;
     color: #fff;
+}
+
+.bg-redd-dark {
+    background-color: rgba(255, 0, 0, 0.761);
 }
